# agent-lexicon

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: agent-lexicon.yml  ci.yml  dictionary.yml  publish.yml
docs/: concepts.md  quickstart.md
examples/customer_limits/: lexicon.json  lexicon.yaml  queries.jsonl
examples/customer_limits/docs/: billing.md
lexicon/: README.md  lexicon.yaml  queries.jsonl
src/agent_lexicon/: __init__.py  __main__.py  cli.py  config.py
src/agent_lexicon/core/: __init__.py  cache.py  files.py  linter.py  loader.py  matcher.py  models.py  resolver.py  snapshots.py  tool_guard.py
src/agent_lexicon/dictionary/: __init__.py  ci.py  diff.py  layout.py  merge.py
src/agent_lexicon/evals/: __init__.py  dataset.py  runner.py
src/agent_lexicon/ingest/: __init__.py  local.py
src/agent_lexicon/mcp/: __init__.py  server.py
src/agent_lexicon/policy/: __init__.py  local.py
src/agent_lexicon/review_agent/: __init__.py  agent.py  consensus.py  dataset.py
src/agent_lexicon/safety/: __init__.py  prompt_injection.py
src/agent_lexicon/scout/: __init__.py  candidates.py  evidence.py  git_merge.py  metrics.py  migrations.py  near_miss.py  oov.py  quality.py  semantic.py  semantic_bge.py
src/agent_lexicon/text/: __init__.py  identifiers.py  unicode.py
src/agent_lexicon/web/: __init__.py  review.py
src/agent_lexicon/workflows/: __init__.py  simple.py
src/agent_lexicon/workspace/: __init__.py  snapshot.py  state.py  storage.py
tests/: test_atomic_writes.py  test_basic.py  test_candidate_quality.py  test_canonical_migrations.py  test_cli_check.py  test_core_models.py  test_decision_provenance_log.py  test_dictionary_ci.py  test_dictionary_layout.py  test_eval_dataset.py  test_eval_runner.py  test_evidence_packs.py  test_git_merge_check.py  test_git_merge_hidden_unresolved_visibility.py  test_git_merge_unknown_classification.py  test_github_actions_workflow.py  test_gitignore_language_defaults.py  test_lexicon_linter.py  test_lexicon_snapshot_metadata.py  test_loader.py  test_local_ingest.py  test_local_policy.py  test_matcher.py  test_mcp_server.py  test_near_miss.py  test_near_miss_precision.py  test_oov_scoring.py  test_prompt_safety.py  test_resolver.py  test_review_agent.py  test_review_dataset.py  test_review_events.py  test_runtime_cache.py  test_scan_config.py  test_scout_candidates.py  test_scout_quality_report.py  test_semantic_bge_backend.py  test_semantic_diff.py  test_semantic_escalation.py  test_semantic_extra_packaging.py  (+11 more)
