[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agent-lexicon"
version = "0.7.0"
description = "A deterministic terminology layer for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "SkeinRank" }
]
keywords = [
  "ai-agents",
  "terminology",
  "lexicon",
  "rag",
  "tool-use",
  "governance"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed"
]
dependencies = []

[project.optional-dependencies]
oov = [
  "tokenizers>=0.15,<1.0",
  "huggingface-hub>=0.20,<1.0"
]
semantic = [
  "sentence-transformers>=2.6,<4.0"
]

[project.urls]
Homepage = "https://github.com/SkeinRank/agent-lexicon"
Repository = "https://github.com/SkeinRank/agent-lexicon"
Issues = "https://github.com/SkeinRank/agent-lexicon/issues"

[project.scripts]
agent-lexicon = "agent_lexicon.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_lexicon"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/examples",
  "/docs",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
  "/.github/workflows",
  "/Makefile",
  "/poetry.lock"
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<10.0"


[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
